# our_sorting_algos

./: README.md  our-sorting-algos.cabal
.stack-work/install/28cbf0ed/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  our-sorting-algos-0.1.0.0-9Uo5Cavp7OMJexfpjtEIv6  primitive-0.6.1.0-Ip44DqhfCp21tTUYbecwa  random-1.1-54KmMHXjttlERYcr1mvsAe  tf-random-0.5-4z8OJUaXC1FRNfrLPFWAD
.stack-work/install/28cbf0ed/lib/x86_64-windows-ghc-8.0.1/our-sorting-algos-0.1.0.0-9Uo5Cavp7OMJexfpjtEIv6/: Bubblesort.hi  Heapsort.hi  Insertionsort.hi  Mergesort.hi  Selectionsort.hi
.stack-work/install/28cbf0ed/pkgdb/: our-sorting-algos-0.1.0.0-9Uo5Cavp7OMJexfpjtEIv6.conf  package.cache
app/: Main.hs
src/: Bubblesort.hs  Heapsort.hs  Insertionsort .hs  Insertionsort.hs  Main.hs  Mergesort .hs  Mergesort.hs  Quicksort .hs  Quicksort.hs  Quicksort.html  Selectionsort.hs
test/: HUnit.hs  HUnit.txt  MainTest.hs  QuickCheck.hs  test.hs
things/: Bubblesort.html  Heapsort.html  Insertionsort.html  Mergesort.html  Selectionsort.html  doc-index.html  index-frames.html  index.html  mini_Bubblesort.html  mini_Heapsort.html  mini_Insertionsort.html  mini_Mergesort.html  mini_Quicksort.html  mini_Selectionsort.html
