name:                our-sorting-algos
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/our-sorting-algos#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Heapsort, Bubblesort, Insertionsort, Selectionsort, Quicksort, Mergesort
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable our-sorting-algos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , our-sorting-algos
  default-language:    Haskell2010

test-suite our-sorting-algos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTest.hs
  build-depends:       base
                     , our-sorting-algos
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/our-sorting-algos
